[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "show_posts"
path = "src/bin/show_posts.rs"

[[bin]]
name = "write_post"
path = "src/bin/write_post.rs"

[[bin]]
name = "publish_post"
path = "src/bin/publish_post.rs"

[[bin]]
name = "get_post"
path = "src/bin/get_post.rs"

[[bin]]
name = "delete_post"
path = "src/bin/delete_post.rs"

[dependencies]
diesel = { version = "2.1.5", features = ["postgres"] }
dotenvy = "0.15"